--- a/ECommerceSite/bin/ECommerceSite.dll.config
+++ b/ECommerceSite/bin/ECommerceSite.dll.config
@@ -8,18 +8,8 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ECommerceSite-20150115122510.mdf;Initial Catalog=aspnet-ECommerceSite-20150115122510;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ECommerceSiteDB" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=ECommerceSiteDB-20150115124244; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ECommerceSiteDB-20150115124244.mdf"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <connectionStrings configSource="Configuration\connections.config" />
+  <appSettings configSource="Configuration\appSettings.config" />
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
