--- a/ECommerceSite/packages.config
+++ b/ECommerceSite/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net451" />
+  <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net451" />
@@ -31,6 +32,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="PayPal" version="1.4.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="RestSharp" version="105.0.1" targetFramework="net451" />
   <package id="Twilio" version="3.6.25" targetFramework="net451" />
